20130522
- Ribbon Generator: try to place widest spaces at end of quadded lines.

20130508
- Ribbon Generator: add justifying and fixed space warnings in MCA editor.

20130502
- Ribbon Generator: add database backup button.

20130501
- Ribbon Generator: schema upgrade runs automatically during startup.
- Ribbon Generator: ensure default preferences are created during login.

20130417
- Ribbon Generator: add job settings management.

20130416
- Ribbon Generator: add support for word-combined spacing, for use when
   justification just won't work any other way.
- Dependencies: New hyphenation engine should permit hyphenation of wide
   (ie, non-ASCII) characters.

20130410
- Ribbon Generator: added Preferences tab.
- Ribbon Generator: new preferences for default MCA sort lists.

20130405
- Ribbon Generator: allow width adjustment in 0.5 unit increments.

20130401
- Caster: Fix a stack trace error when accessing the preferences page.

20130318
- Ribbon Generator: added new application info page with information
   useful for troubleshooting efforts.

20130305
- Ribbon Generator: make line code display on soft proof a dialog rather
   than a tooltip that scrolls off the screen.

20130302
- Ribbon Generator: re-enable unit shift in ribbon generator and mca editor.
- Ribbon Generator: sort mca list in case insensitive fashion.
- Ribbon Generator: when using unit shift, fixed spaces are available for
   either width available for their mca position.
- Ribbon Generator: update available sorts list to include real dipthongs 
  and proper quotation marks.

20121231
- Ribbon Generator and Caster Control: update to new version of Web and 
   Cocoa frameworks.
- Ribbon Generator: added support for indents, regular and hanging.

  syntax:

  <indentN> where N is a positive or negative integer indicating
  the number of units to indent. Negative numbers trigger hanging
  indentation.

  Note: In order for the first line of text to honor indentation commands,