@@ -1,0 +1,112 @@
+<style type="text/css">
+table.padded-table td { padding:7px; }
+</style>
+<div>
+<p>
+<table width="600" class="padded-table">
+<tr>
+<th><b>Control Code</b></th>
+<th><b>Description</b></th>
+</tr><tr>
+<td>&#60;A&#91;activator]> </td>
+<td> insert character or ligature identified by &#91;activator]
+</td>
+</tr>
+<tr>
+<td>&#60;qo> </td>
+<td> quad out the current line and begin a new line
+</td>
+</tr>
+<tr>
+<td>&#60;p> </td>
+<td> start a new line, quadding out if the line cannot be justified (differs from &#60;qo> in that <qo> will always result in spaces of the minimum allowable width)
+</td>
+</tr>
+<tr>
+<td>&#60;i>...&#60;/i> </td>
+<td> select italic alphabet for the text contained within, if available
+</td>
+</tr>
+<tr>
+<td>&#60;b>...&#60;/b> </td>
+<td> select bold alphabet for the text contained within, if available
+</td>
+</tr>
+<tr>
+<td>&#60;sc>...&#60;/sc> </td>
+<td> select small cap alphabet for the text contained within, if available
+</td>
+</tr>
+<tr>
+<td>&#60;center> </td>
+<td> center justify
+</td>
+</tr>
+<tr>
+<td>&#60;left> </td>
+<td> left justify (aka ragged right)
+</td>
+</tr>
+<tr>
+<td>&#60;right> </td>
+<td> right justify (aka ragged left)
+</td>
+</tr>
+<tr>
+<td>&#60;justify> </td>
+<td> default justification mode
+</td>
+</tr>
+<tr>
+<td>&#60;s&#91;n]> </td>
+<td> insert a fixed &#91;n] unit space
+</td>
+</tr>
+<tr>
+<td>&#60;l&#91;n]>...&#60;/l&#91;n]> </td>
+<td> adjust all sorts contained within by adding &#91;n] units (letterspacing)
+</td>
+</tr>
+<tr>
+<td>&#60;indent&#91;n]>...&#60;/indent&#91;n]> </td>
+<td> indent paragraphs, where N is a positive or negative integer indicating the number of units to indent. Negative numbers trigger hanging indentation.
+</td>
+</tr>
+<tr>
+<td>&#60;header>...&#60;/header> </td>
+<td> define the current header for all (even and odd) pages. 
+</td>
+</tr>
+<tr>
+<td>&#60;footer>...&#60;/footer> </td>
+<td> define the current footer for all (even and odd) pages.
+</td>
+</tr>
+<tr>
+<td>&#60;eheader>...&#60;/eheader> </td>
+<td> define the current header for even pages.
+</td>
+</tr>
+<tr>
+<td>&#60;efooter>...&#60;/efooter> </td>
+<td> define the current footer for even pages.
+</td>
+</tr>
+<tr>
+<td>&#60;oheader>...&#60;/oheader> </td>
+<td> define the current header for odd pages.
+</td>
+</tr>
+<tr>
+<td>&#60;ofooter>...&#60;/ofooter> </td>
+<td> define the current footer for odd pages.
+</td>
+</tr>
+<tr>
+<td>&#60;pagebreak> </td>
+<td> manually force a page break
+</td>
+</tr>
+</table>
+</p>
+</div>
