@@ -1,3 +1,9 @@
+20130613
+- Ribbon Generator: add a popup describing formatting control codes.
+
+20130528
+- Ribbon Generator: give soft proof line numbers more room to breathe.
+
 20130522
 - Ribbon Generator: try to place widest spaces at end of quadded lines.
 
